--- a/docs/1/2/2.md
+++ b/docs/1/2/2.md
@@ -1,2 +1,117 @@
 # Go 语言环境搭建
 
+## 下载 Go
+[Go 安装文件以及源代码](https://golang.google.cn/dl/)<br>
+下载对应平台的二进制文件并安装
+
+### 环境变量
+- GOROOT
+    - go的安装目录
+- GOPATH
+    - src：存放源代码
+    - pkg：存放依赖包
+    - bin：存放可执行文件
+- 其他常用变量
+    - GOOS，GOARCH，GOPROXY
+    - 大陆用户建议设置 goproxy: export GOPROXY=https://goproxy.cn
+## IDE 设置（VS Code）
+- 下载并安装 Visual Studio Code: https://code.visualstudio.com/download
+- 安装 Go 语言插件: https://marketplace.visualstudio.com/items?itemName=golang.go
+- 其他可选项
+    - Intellj goland，收费软件
+    - vim，sublime等
+
+## 一些基本命令
+| 命令          | 作用 |
+| :----:        | :--- |
+| bug           | start a bug report |
+| **build**     | compile packages and dependencies |
+| clean         | remove object files and cached files |
+| doc           | show documentation for package or symbol |
+| env           | print Go environment information |
+| fix           | update packages to use new APIs |
+| **fmt**       | gofmt(reformat) package sources |
+| generate      | generate Go files by processing source |
+| **get**       | add dependencies to current module and install them |
+| **install**   | compile and install packages and dependencies |
+| list          | list packages or modules |
+| **mod**       | module maintenance |
+| run           | compile and run Go program |
+| **test**      | test packages |
+| **tool**      | run specified go tool |
+| version       | print Go version |
+| vet           | report likely mistakes in packages |
+
+## Go build
+- Go 语言不支持动态链接，因此编译时会将所有依赖编译进同一个二进制文件。
+- 指定输出目录。
+    - go build –o bin/mybinary
+- 常用环境变量设置编译操作系统和 CPU 架构
+    - GOOS=linux GOARCH=amd64 go build
+- 全支持列表
+    - $GOROOT/src/go/build/syslist.go
+
+## Go test
+Go 语言原生自带测试
+```
+import "testing"
+
+func TestIncrease(t *testing.T) {
+    t.Log("Start testing")
+    increase(1, 2) 
+}
+```
+go test ./… -v 运行测试<br>
+go test命令扫描所有*_test.go为结尾的文件，惯例是将测试代码与正式代码放在同目录，如 foo.go 的测试代码一般写在 foo_test.go
+
+## Go vet
+代码静态检查，发现可能的 bug 或者可疑的构造<br>
+- Print-format 错误，检查类型不匹配的print
+```
+str := "hello world!"
+fmt.Printf("%d\n", str)
+```
+- Boolean 错误，检查一直为 true、false 或者冗余的表达式
+```
+fmt.Println(i != 0 || i != 1)
+```
+- Range 循环，比如如下代码主协程会先退出，go routine无法被执行
+```
+words := []string{"foo", "bar", "baz"} 
+for _, word := range words {
+    go func() {
+    fmt.Println(word)
+    }()
+}
+```
+- Unreachable的代码，如 return 之后的代码
+- 其他错误，比如变量自赋值，error 检查滞后等
+```
+res, err := http.Get("https://www.spreadsheetdb.io/") 
+defer res.Body.Close() 
+if err != nil {
+    log.Fatal(err)
+}
+```
+## 代码版本控制
+- 下载并安装 Git Command Line
+    - https://git-scm.com/downloads
+- Github
+    - 本课程示例代码均上传在 https://github.com/cncamp/golang
+- 创建代码目录
+    - mkdir –p $GOPATH/src/github.com/cncamp
+    - cd $GOPATH/src/github.com/cncamp
+- 代码下载
+    - git clone https://github.com/cncamp/golang.git
+- 修改代码
+- 上传代码
+    - git add filename
+    - git commit –m 'change logs'
+    - git push
+
+## Golang playground
+官方 playground<br>
+https://play.golang.org/<br>
+可直接编写和运行 Go 语言程序<br>
+国内可直接访问的 playground<br>
+https://goplay.tools/<br>
