--- a/docs/1/2/2.md
+++ b/docs/1/2/2.md
@@ -42,8 +42,25 @@
 | version       | print Go version |
 | vet           | report likely mistakes in packages |
 
+## Go run
+```
+cd k8s-mengfanjie/01golang/01examples/01module/01helloworld/
+➜  01helloworld git:(main) ✗ go run main.go 
+Hello world
+```
+
 ## Go build
 - Go 语言不支持动态链接，因此编译时会将所有依赖编译进同一个二进制文件。
+- 指定输出目录及文件名
+
+code: k8s-mengfanjie/01golang/01examples/01module/01helloworld
+```
+➜  01helloworld git:(main) ✗ go build -o main main.go   
+➜  01helloworld git:(main) ✗ ll 
+总用量 1.2M
+-rwxrwxr-x 1 cjx cjx 1.2M 9月   4 16:47 main
+-rw-rw-r-- 1 cjx cjx   54 9月   4 16:45 main.go
+```
 - 指定输出目录。
     - go build –o bin/mybinary
 - 常用环境变量设置编译操作系统和 CPU 架构
@@ -51,15 +68,25 @@
 - 全支持列表
     - $GOROOT/src/go/build/syslist.go
 
+## Go mod
+将项目放到 $GOROOT 下
+```
+go mod init github/mkbooks-codes/k8s-mengfanjie
+```
+
+## Go get
+```
+go get github.com/magiconair/properties/assert
+```
+
 ## Go test
 Go 语言原生自带测试
-```
-import "testing"
 
-func TestIncrease(t *testing.T) {
-    t.Log("Start testing")
-    increase(1, 2) 
-}
+code: k8s-mengfanjie/01golang/01examples/01module/02gotest
+```
+➜  02gotest git:(main) ✗ go test                                        
+PASS
+ok      github/mkbooks-codes/k8s-mengfanjie/01golang/01examples/01module/02gotest       0.001s
 ```
 go test ./… -v 运行测试<br>
 go test命令扫描所有*_test.go为结尾的文件，惯例是将测试代码与正式代码放在同目录，如 foo.go 的测试代码一般写在 foo_test.go
@@ -93,6 +120,18 @@ if err != nil {
     log.Fatal(err)
 }
 ```
+
+code: k8s-mengfanjie/01golang/01examples/01module/03govet/
+```
+➜  03govet git:(main) ✗ go vet
+# github/mkbooks-codes/k8s-mengfanjie/01golang/01examples/01module/03govet
+./main.go:15:14: suspect or: i != 0 || i != 1
+./main.go:25:8: using res before checking for errors
+./main.go:20:16: loop variable word captured by func literal
+./main.go:11:2: Printf format %d has arg name of wrong type string
+./main.go:12:2: Printf call needs 1 arg but has 2 args
+```
+
 ## 代码版本控制
 - 下载并安装 Git Command Line
     - https://git-scm.com/downloads
