--- a/docs/1/2/2.md
+++ b/docs/1/2/2.md
@@ -15,7 +15,7 @@
     - GOOS，GOARCH，GOPROXY
     - 大陆用户建议设置 goproxy: export GOPROXY=https://goproxy.cn
 ## IDE 设置（VS Code）
-- 下载并安装 Visual Studio Code: https://code.visualstudio.com/download
+- 下载并安装 Visual Studio > code: https://code.visualstudio.com/download
 - 安装 Go 语言插件: https://marketplace.visualstudio.com/items?itemName=golang.go
 - 其他可选项
     - Intellj goland，收费软件
@@ -53,7 +53,7 @@ Hello world
 - Go 语言不支持动态链接，因此编译时会将所有依赖编译进同一个二进制文件。
 - 指定输出目录及文件名
 
-code: k8s-mengfanjie/01golang/01examples/01module/01helloworld
+> code: k8s-mengfanjie/01golang/01examples/01module/01helloworld
 ```
 ➜  01helloworld git:(main) ✗ go build -o main main.go   
 ➜  01helloworld git:(main) ✗ ll 
@@ -82,7 +82,7 @@ go get github.com/magiconair/properties/assert
 ## Go test
 Go 语言原生自带测试
 
-code: k8s-mengfanjie/01golang/01examples/01module/02gotest
+> code: k8s-mengfanjie/01golang/01examples/01module/02gotest
 ```
 ➜  02gotest git:(main) ✗ go test                                        
 PASS
@@ -121,7 +121,8 @@ if err != nil {
 }
 ```
 
-code: k8s-mengfanjie/01golang/01examples/01module/03govet/
+> code: k8s-mengfanjie/01golang/01examples/01module/03govet
+
 ```
 ➜  03govet git:(main) ✗ go vet
 # github/mkbooks-codes/k8s-mengfanjie/01golang/01examples/01module/03govet
