--- a/docs/1/2/4.md
+++ b/docs/1/2/4.md
@@ -33,7 +33,8 @@
         - j := i // j 也是一个 int
 
 ## 数组
-code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+> code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+
 - 相同类型且长度固定连续内存片段
 - 以编号访问每个元素
 - 定义方法
@@ -41,7 +42,8 @@ code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
 - 示例
 - myArray := [3]int{1,2,3}
 ## 切片(slice)
-code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+> code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+
 - 切片是对数组一个连续片段的引用
 - 数组定义中不指定长度即为切片
     - var identifier []type
@@ -80,7 +82,8 @@ fmt.Printf("mySlice %+v\n", mySlice)
 ```
 
 ## Map
-code: k8s-mengfanjie/01golang/01examples/01module/07map
+> code: k8s-mengfanjie/01golang/01examples/01module/07map
+
 - 声明方法
     - var map1 map[keytype]valuetype
 - 示例
@@ -110,7 +113,8 @@ for k, v := range myMap {
 ```
 
 ## 结构体和指针
-code: k8s-mengfanjie/01golang/01examples/01module/08struct-point
+> code: k8s-mengfanjie/01golang/01examples/01module/08struct-point
+
 - 通过 type … struct 关键字自定义结构体
 - Go 语言支持指针，但不支持指针运算
     - 指针变量的值为内存地址
