--- a/docs/1/2/5.md
+++ b/docs/1/2/5.md
@@ -130,3 +130,136 @@ func (s *Server) StartTLS() {
 - 函数内修改参数的值不会影响函数外原始变量的值
 - 可以传递指针参数将变量地址传递给调用函数，Go 语言会复制该指针作为函数内的地址，但指向同一地址
 - 思考：当我们写代码的时候，函数的参数传递应该用 struct 还是 pointer？
+## 接口
+> code: k8s-mengfanjie/01golang/01examples/01module/14interface
+
+- 接口定义一组方法集合
+```
+type IF interface {
+    Method1(param_list) return_type
+} 
+```
+- 适用场景：Kubernetes 中有大量的接口抽象和多种实现
+- Struct 无需显示声明实现 interface，只需直接实现方法
+- Struct 除实现 interface 定义的接口外，还可以有额外的方法
+- 一个类型可实现多个接口（Go 语言的多重继承）
+- Go 语言中接口不接受属性定义
+- 接口可以嵌套其他接口
+```
+type IF interface {
+    getName() string
+}
+
+type Human struct {
+    firstName, lastName string
+}
+
+func (h *Human) getName() string {
+    return h.firstName + "," + h.lastName
+}
+
+type Car struct {
+    factory, model string
+}
+
+func (c *Car) getName() string {
+    return c.factory + "-" + c.model
+}
+
+func main() {
+    interfaces := []IF{}
+    h := new(Human)
+    h.firstName = "first"
+    h.lastName = "last"
+    interfaces = append(interfaces, h)
+    c := new(Car)
+    c.factory = "benz"
+    c.model = "s"
+    interfaces = append(interfaces, c)
+    for _, f := range interfaces {
+        fmt.Println(f.getName())
+    } 
+}
+```
+### 注意事项
+- Interface 是可能为 nil 的，所以针对 interface 的使用一定要预先判空，否则会引起程序 crash(nil panic)
+- Struct 初始化意味着空间分配，对 struct 的引用不会出现空指针
+## 反射机制
+> code: k8s-mengfanjie/01golang/01examples/01module/15reflect
+
+- reflect.TypeOf ()返回被检查对象的类型
+- reflect.ValueOf()返回被检查对象的值
+- 示例
+```
+myMap := make(map[string]string, 10)
+myMap["a"] = "b"
+t := reflect.TypeOf(myMap)
+fmt.Println("type:", t)
+v := reflect.ValueOf(myMap)
+fmt.Println("value:", v)
+```
+### 基于 struct 的反射
+```
+// struct
+myStruct := T{A: "a"}
+v1 := reflect.ValueOf(myStruct)
+for i := 0; i < v1.NumField(); i++ {
+    fmt.Printf("Field %d: %v\n", i, v1.Field(i))
+}
+for i := 0; i < v1.NumMethod(); i++ {
+    fmt.Printf("Method %d: %v\n", i, v1.Method(i))
+}
+// 需要注意 receive 是 struct 还是指针
+result := v1.Method(0).Call(nil)
+fmt.Println("result:", result)
+```
+## Go 语言中的面向对象编程
+- 可见性控制
+- public - 常量、变量、类型、接口、结构、函数等的名称大写
+- private - 非大写就只能在包内使用
+- 继承
+- 通过组合实现，内嵌一个或多个 struct
+- 多态
+- 通过接口实现，通过接口定义方法集，编写多套实现
+## Json 编解码
+> code: k8s-mengfanjie/01golang/01examples/01module/16json
+
+- Unmarshal: 从 string 转换至 struct
+```
+func unmarshal2Struct(humanStr string)Human {
+    h := Human{}
+    err := json.Unmarshal([]byte(humanStr), &h)
+    if err != nil {
+        println(err)
+    }
+    return h 
+} 
+```
+- Marshal: 从 struct 转换至 string
+```
+func marshal2JsonString(h Human) string {
+    h.Age = 30
+    updatedBytes, err := json.Marshal(&h)
+    if err != nil {
+        println(err)
+    }
+    return string(updatedBytes) 
+}
+```
+- json 包使用 map[string]interface{} 和 []interface{} 类型保存任意对象
+- 可通过如下逻辑解析任意 json
+```
+var obj interface{}
+err := json.Unmarshal([]byte(humanStr), &obj)
+objMap, ok := obj.(map[string]interface{})
+for k, v := range objMap {
+    switch value := v.(type) {
+        case string:
+            fmt.Printf("type of %s is string, value is %v\n", k, value)
+        case interface{}:
+            fmt.Printf("type of %s is interface{}, value is %v\n", k, value)
+        default:
+            fmt.Printf("type of %s is wrong, value is %v\n", k, value)
+    } 
+}
+```
