--- a/docs/1/2/2.md
+++ b/docs/1/2/2.md
@@ -53,7 +53,7 @@ Hello world
 - Go 语言不支持动态链接，因此编译时会将所有依赖编译进同一个二进制文件。
 - 指定输出目录及文件名
 
-> code: k8s-mengfanjie/01golang/01examples/01module/01helloworld
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/01helloworld/main.go)
 ```
 ➜  01helloworld git:(main) ✗ go build -o main main.go   
 ➜  01helloworld git:(main) ✗ ll 
@@ -82,7 +82,7 @@ go get github.com/magiconair/properties/assert
 ## Go test
 Go 语言原生自带测试
 
-> code: k8s-mengfanjie/01golang/01examples/01module/02gotest
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/02gotest/main.go)
 ```
 ➜  02gotest git:(main) ✗ go test                                        
 PASS
@@ -121,7 +121,7 @@ if err != nil {
 }
 ```
 
-> code: k8s-mengfanjie/01golang/01examples/01module/03govet
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/03govet/main.go)
 
 ```
 ➜  03govet git:(main) ✗ go vet
