--- a/docs/1/2/3.md
+++ b/docs/1/2/3.md
@@ -1,6 +1,6 @@
 # 控制结构
 ## 分支
-> code: k8s-mengfanjie/01golang/01examples/01module/04if-switch
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/04if-switch/main.go)
 ### if
 - 基本形式
 ```
@@ -43,7 +43,7 @@ default: //默认分支
 }
 ```
 ## 循环
-> code: k8s-mengfanjie/01golang/01examples/01module/05forloop
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/05forloop/main.go)
 ### for
 ```
 Go 只有一种循环结构：for 循环。
