--- a/docs/1/2/4.md
+++ b/docs/1/2/4.md
@@ -33,7 +33,7 @@
         - j := i // j 也是一个 int
 
 ## 数组
-> code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/06array-slice
 
 - 相同类型且长度固定连续内存片段
 - 以编号访问每个元素
@@ -42,7 +42,7 @@
 - 示例
 - myArray := [3]int{1,2,3}
 ## 切片(slice)
-> code: k8s-mengfanjie/01golang/01examples/01module/06array-slice
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/06array-slice/main.go)
 
 - 切片是对数组一个连续片段的引用
 - 数组定义中不指定长度即为切片
@@ -82,7 +82,7 @@ fmt.Printf("mySlice %+v\n", mySlice)
 ```
 
 ## Map
-> code: k8s-mengfanjie/01golang/01examples/01module/07map
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/07map/main.go)
 
 - 声明方法
     - var map1 map[keytype]valuetype
@@ -113,7 +113,7 @@ for k, v := range myMap {
 ```
 
 ## 结构体和指针
-> code: k8s-mengfanjie/01golang/01examples/01module/08struct-point
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/08struct-point/main.go)
 
 - 通过 type … struct 关键字自定义结构体
 - Go 语言支持指针，但不支持指针运算
