--- a/docs/1/2/5.md
+++ b/docs/1/2/5.md
@@ -14,7 +14,7 @@ func main() {
 }
 ```
 ## 参数解析
-> code: k8s-mengfanjie/01golang/01examples/01module/09flag
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/09flag/main.go)
 
 - 请注意 main 函数与其他语言不同，没有类似 java 的 []string args 参数
 - Go 语言如何传入参数呢？
@@ -24,7 +24,7 @@ func main() {
         - name := flag.String("name", "world", "specify the name you want to say hi")
         - flag.Parse()
 ## 返回值
-> code: k8s-mengfanjie/01golang/01examples/01module/10return
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/10return/main.go)
 
 - 多值返回
 - 函数可以返回任意数量的返回值
@@ -37,7 +37,7 @@ func main() {
 result, _ = strconv.Atoi(origStr)
 ```
 ## Init 函数
-> code: k8s-mengfanjie/01golang/01examples/01module/11init
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/11init/main.go)
 
 - Init 函数：会在包初始化时运行
 - 谨慎使用 init 函数
@@ -72,7 +72,7 @@ myArray = append(myArray, "a","b","c")
 | complex, real, imag | 操作复数 |
 
 ## 回调函数(Callback)
-> code: k8s-mengfanjie/01golang/01examples/01module/12callbacks
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/12callbacks/main.go)
 
 - 函数作为参数传入其它函数，并在其他函数内部调用执行
     - strings.IndexFunc(line, unicode.IsSpace) 
@@ -124,14 +124,14 @@ func (s *Server) StartTLS() {
 }
 ```
 ## 传值还是传指针
-> code: k8s-mengfanjie/01golang/01examples/01module/13pointer
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/13pointer/main.go)
 
 - Go 语言只有一种规则-传值
 - 函数内修改参数的值不会影响函数外原始变量的值
 - 可以传递指针参数将变量地址传递给调用函数，Go 语言会复制该指针作为函数内的地址，但指向同一地址
 - 思考：当我们写代码的时候，函数的参数传递应该用 struct 还是 pointer？
 ## 接口
-> code: k8s-mengfanjie/01golang/01examples/01module/14interface
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/14interface/main.go)
 
 - 接口定义一组方法集合
 ```
@@ -185,7 +185,7 @@ func main() {
 - Interface 是可能为 nil 的，所以针对 interface 的使用一定要预先判空，否则会引起程序 crash(nil panic)
 - Struct 初始化意味着空间分配，对 struct 的引用不会出现空指针
 ## 反射机制
-> code: k8s-mengfanjie/01golang/01examples/01module/15reflect
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/15reflect/main.go)
 
 - reflect.TypeOf ()返回被检查对象的类型
 - reflect.ValueOf()返回被检查对象的值
@@ -222,7 +222,7 @@ fmt.Println("result:", result)
 - 多态
 - 通过接口实现，通过接口定义方法集，编写多套实现
 ## Json 编解码
-> code: k8s-mengfanjie/01golang/01examples/01module/16json
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/16json/main.go)
 
 - Unmarshal: 从 string 转换至 struct
 ```
