--- a/docs/1/2/5.md
+++ b/docs/1/2/5.md
@@ -222,7 +222,7 @@ fmt.Println("result:", result)
 - 多态
 - 通过接口实现，通过接口定义方法集，编写多套实现
 ## Json 编解码
-> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/16json/main.go)
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/01module/16json/main.go "Json 编解码")
 
 - Unmarshal: 从 string 转换至 struct
 ```
