--- a/docs/1/3/7.md
+++ b/docs/1/3/7.md
@@ -45,7 +45,9 @@ func main() {
 }
 ```
 
-## 性能分析（Performance Profiling） 
+## 性能分析（Performance Profiling）
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/02module/07cpuprofiling/main.go)
+
 - CPU Profiling: 在代码中添加 CPUProfile 代码，runtime/pprof 包提供支持
 ```
 var cpuprofile = flag.String("cpuprofile", "", "write cpu profile to file")
