--- a/docs/1/3/9.md
+++ b/docs/1/3/9.md
@@ -74,6 +74,8 @@ k8s.io/kubernetes/vendor/github.com/vishvananda/netlink.(*Handle).RouteListFilte
 通过 pprof 打印出该进程的所有 go routine 信息，发现 worker 线程都卡在 http 请求调用处。当worker线程调用 LBaaS API 时，底层是 net/http 包调用，而客户端在发起连接请求时，未设置客户端超时时间。这导致当出现某些网络异常时，客户端会永远处于等待状态。
 - 解决方法：修改代码加入客户端超时控制。
 ## 课后练习 2.2
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/blob/main/01golang/01examples/02module/06homework/main.go)
+
 - 编写一个 HTTP 服务器，此练习为正式作业需要提交并批改
 - 鼓励群里讨论，但不建议学习委员和课代表发满分答案，给大家留一点思考空间
 - 大家视个人不同情况决定完成到哪个环节，但尽量把 a 都做完
