--- a/docs/2/1/2.md
+++ b/docs/2/1/2.md
@@ -55,14 +55,15 @@ $ sudo apt-get install docker-ce docker-ce-cli containerd.io
 - 查看容器进程
     - docker ps
 - 查看容器细节：
-    - docker inspect <containerid> 
+    - docker inspect <containerid\> 
 - 进入容器；
+    - docker exec -it <containerid\> bash
 - Docker attach：
     - 通过 nsenter
-    - PID=$(docker inspect --format "{{ .State.Pid }}" <container>)
+    - PID=$(docker inspect --format "{{ .State.Pid }}" <container\>)
     - $ nsenter --target $PID --mount --uts --ipc --net --pid
 - 拷贝文件至容器内：
-    - docker cp file1 <containerid>:/file-to-path
+    - docker cp file1 <containerid\>:/file-to-path
 
 ## 初识容器
 - cat Dockerfile
@@ -127,18 +128,21 @@ struct nsproxy {
 在创建新进程的系统调用时，可以通过 flags 参数指定需要新建的 Namespace 类型：
 
 // CLONE_NEWCGROUP / CLONE_NEWIPC / CLONE_NEWNET / CLONE_NEWNS / CLONE_NEWPID / CLONE_NEWUSER / CLONE_NEWUTS
-
+```
 int clone(int (*fn)(void *), void *child_stack, int flags, void *arg) 
-
+```
 - <b>setns</b>
 
 该系统调用可以让调用进程加入某个已经存在的 Namespace 中：
+```
 Int setns(int fd, int nstype) 
-
+```
 - <b>unshare</b>
 
 该系统调用可以将调用进程移动到新的 Namespace 下：
+```
 int unshare(int flags)
+```
 
 #### 隔离性 – Linux Namespace
 ![隔离性 – Linux Namespace](images/%E9%9A%94%E7%A6%BB%E6%80%A7%E2%80%93Linux-Namespace.png)
@@ -264,7 +268,7 @@ cgroups 实现了对资源的配额和度量
 - CFS 实现的主要思想是维护为任务提供处理器时间方面的平衡，这意味着应给进程分配相当数量的处理器。
 - 分给某个任务的时间失去平衡时，应给失去平衡的任务分配时间，让其执行。
 - CFS 通过虚拟运行时间（vruntime）来实现平衡，维护提供给某个任务的时间量。
-- vruntime = 实际运行时间*1024 / 进程权重
+    - vruntime = 实际运行时间*1024 / 进程权重
 - 进程按照各自不同的速率在物理时钟节拍内前进，优先级高则权重大，其虚拟时钟比真实时钟跑得慢，但获得比较多的运行时间。
 #### vruntime 红黑树
 CFS 调度器没有将进程维护在运行队列中，而是维护了一个以虚拟运行时间为顺序的红黑树。 红黑树的主要特点有：
@@ -312,15 +316,15 @@ echo 10000 > cpu.cfs_quota_us
 
 包含该 Cgroup 及其子 Cgroup 下进程使用的 CPU 时间，以及用户态和内核态的时间。
 #### Memory 子系统
-- memory.usage_in_bytes
+- memory.usage_in_bytes<br>
 cgroup 下进程使用的内存，包含 cgroup 及其子 cgroup 下的进程使用的内存
-- memory.max_usage_in_bytes
+- memory.max_usage_in_bytes<br>
 cgroup 下进程使用内存的最大值，包含子 cgroup 的内存使用量。
-- memory.limit_in_bytes
+- memory.limit_in_bytes<br>
 设置 Cgroup 下进程最多能使用的内存。如果设置为 -1，表示对该 cgroup 的内存使用不做限制。
-- memory.soft_limit_in_bytes
+- memory.soft_limit_in_bytes<br>
 这个限制并不会阻止进程使用超过限额的内存，只是在系统内存足够时，会优先回收超过限额的内存，使之向限定值靠拢。
-- memory.oom_control
+- memory.oom_control<br>
 
 <font color=orange>设置是否在 Cgroup 中使用 OOM（Out of Memory）Killer，默认为使用。当属于该 cgroup 的进程使用的内存超过最大的限定值时，会立刻被 OOM Killer 处理。</font>
 
