fix: docker.namespace

--- a/docs/2/1/2.md
+++ b/docs/2/1/2.md
@@ -167,6 +167,8 @@ int unshare(int flags)
     - 每个 container 可以有不同的 user 和 group id, 也就是说可以在 container 内部用 container 内部的用户执行程序而非 Host 上的用户。
 
 #### 关于 namespace 的常用操作
+> [code](https://github.com/mkbooks-codes/k8s-mengfanjie/02docker/01namespace.md)
+
 - 查看当前系统的 namespace：
 ```
 lsns –t <type>
