fix: docker.Network

--- a/docs/2/1/3.md
+++ b/docs/2/1/3.md
@@ -1,5 +1,25 @@
 # Dockerfile 的最佳实践
-回顾 12 Factor 之进程
+
+## 创建 docker 镜像
+定义 dockerfile
+```
+FROM ubuntu
+# so apt-get doesn't complain
+ENV DEBIAN_FRONTEND=noninteractive
+RUN sed -i 's/^exit 101/exit 0/' /usr/sbin/policy-rc.d
+RUN \
+    apt-get update && \
+    apt-get install -y ca-certificates && \
+    apt-get install -y curl && \
+    rm -rf /var/lib/apt/lists/*
+ADD ./bin/eic eic
+ENTRYPOINT ["/eic"]
+```
+```
+docker build
+```
+
+## 回顾 12 Factor 之进程
 
 - 运行环境中，应用程序通常是以一个和多个<font color=red>进程</font>运行的。
     - 12-Factor 应用的进程必须无状态（Stateless）且无共享（Share nothing）。
