fix: docker.dockerfile

--- a/docs/2/1/3.md
+++ b/docs/2/1/3.md
@@ -92,6 +92,19 @@ CMD ["--help"]
 ```
 FROM [--platform=<platform>] <image>[@<digest>] [AS <name>]
 ```
+docker 基础镜像:
+
+- scratch: 空镜像，基础镜像
+    - scratch 是 Docker 中预留的最小的基础镜像。bosybox、Go 语言编译打包的镜像都可以基于 scratch 来构建。
+    - scratch镜像不在镜像仓库中，但是可以在 Dockerfile 引用。
+    - 运行一个包含所有依赖的二进制文件，如 Golang 程序，可以直接使用 scratch 作为基础镜像。
+- busybox
+    - BusyBox 是一个集成了一百多个最常用 Linux 命令和工具（如 cat、echo、grep、mount、telnet 等）的精简工具箱，它只有几 MB 的大小，很方便进行各种快速验证，被誉为“Linux系统的瑞士军刀”。BusyBox 可运行于多款 POSIX 环境的操作系统中，如 Linux（包括Android）、Hurd、FreeBSD 等。
+- Alpine
+    - Alpine 操作系统是一个面向安全的轻型 Linux 发行版。它不同于通常的 Linux 发行版，Alpine 采用了 musl libc 和 BusyBox 以减小系统的体积和运行时资源消耗，但功能上比 BusyBox 又完善得多。在保持瘦身的同时，Alpine 还提供了自己的包管理工具 apk，可以通过 https://pkgs.alpinelinux.org/packages 查询包信息，也可以通过apk命令直接查询和安装各种软件。
+    - Alpine Docker 镜像也继承了 Alpine Linux 发行版的这些优势。相比于其他 Docker 镜像，它的容量非常小，仅仅只有 5MB 左右（Ubuntu系列镜像接近200MB），且拥有非常友好的包管理机制。官方镜像来自 docker-alpine 项目。
+    - 目前 Docker 官方已开始推荐使用 Alpine 替代之前的 Ubuntu 作为基础镜像环境。这样会带来多个好处，包括镜像下载速度加快，镜像安全性提高，主机之间的切换更方便，占用更少磁盘空间等。
+
 - <font color=orange>LABELS：按标签组织项目</font>
 ```
 LABEL multi.label1="value1" multi.label2="value2" other="value3”
@@ -116,18 +129,22 @@ EXPOSE <port> [<port>/<protocol>...]
 ```
 ENV <key>=<value> ...
 ```
-- ADD：从源地址（文件，目录或者 URL）复制文件到目标路径
+- ADD：从源地址（文件，目录或者 <font color=orange>URL</font>）复制文件到目标路径
 ```
 ADD [--chown=<user>:<group>] <src>... <dest>
 ADD [--chown=<user>:<group>] [“<src>”,... “<dest>”] （路径中有空格时使用）
 ```
-- ADD 支持 Go 风格的通配符，如 ADD check* /testdir/ - src 如果是文件，则必须包含在编译上下文中，ADD 指令无法添加编译上下文之外的文件
+- ADD 支持 Go 风格的通配符，如 ADD check* /testdir/ 
+- src 如果是文件，则必须包含在编译上下文中，ADD 指令无法添加编译上下文之外的文件
 - src 如果是 URL
     - 如果 dest 结尾没有/，那么 dest 是目标文件名，如果 dest 结尾有/，那么 dest 是目标目录名
 - 如果 src 是一个目录，则所有文件都会被复制至 dest
 - 如果 src 是一个本地压缩文件，则在 ADD 的同时完整解压操作
 - 如果 dest 不存在，则 ADD 指令会创建目标目录
 - 应尽量减少通过 ADD URL 添加 remote 文件，建议使用 curl 或者 wget && untar
+
+<br>
+
 - COPY：从源地址（文件，目录或者URL）复制文件到目标路径
 ```
 COPY [--chown=<user>:<group>] <src>... <dest>
