fix: docker.dockerfile

--- a/docs/2/1/3.md
+++ b/docs/2/1/3.md
@@ -280,6 +280,6 @@ Docker hub
 - 通过 nsenter 进入容器查看 IP 配置
 
 ## 参考资料
-- https://www.cnblogs.com/XiaoliBoy/p/10410686.html
-- http://www.wowotech.net/process_management/451.html
+- [Linux内核CFS调度器](https://www.cnblogs.com/XiaoliBoy/p/10410686.html)
+- [CFS调度器（5）-带宽控制](http://www.wowotech.net/process_management/451.html)
 
