--- a/docs/2/2/2.md
+++ b/docs/2/2/2.md
@@ -15,7 +15,7 @@
 
 ### 基本概念
 #### Workload
-- prod：在线任务，长期运行、对延时敏感、面向终端用户等，比如Gmail, Google Docs,Web Search 服务等。 
+- prod：在线任务，长期运行、对延时敏感、面向终端用户等，比如Gmail, Google Docs, Web Search 服务等。 
 - non-prod ：离线任务，也称为批处理任务（Batch），比如一些分布式计算服务等。
 #### Cell
 - 一个 Cell 上跑一个集群管理系统 Borg。 
@@ -40,7 +40,9 @@
 
 - 调度策略
     - Worst Fit
+        - 调度到最空闲的机器，最终使得每台机器的资源消耗相近。
     - Best Fit
+        - 调度到刚刚好满足资源的机器，方便得出最小需求机器的资源，将多余机器踢出节约成本。
     - Hybrid
 - 调度优化
     - Score caching: 当服务器或者任务的状态未发生变更或者变更很少时，直接采用缓存数据，避免重复计算。 
