--- a/docs/2/2/3.md
+++ b/docs/2/2/3.md
@@ -69,3 +69,7 @@ Mon Mar 25 14:56:11 UTC 2019
 Mon Mar 25 14:56:14 UTC 2019
 ...
 ```
+如果日志存储在文件中，查看日志的方式
+```
+kubectl exec -it pod_name -- tail -f 日志路径/xxx.log
+```
