fix: 深入理解 Kubernetes

--- a/docs/2/2/4.md
+++ b/docs/2/2/4.md
@@ -127,7 +127,7 @@ Metadata 中有两个最重要的属性：<font color=blue>Namespace和Name</fon
 
 2. <font color=blue>Annotation</font>
 
-    Annotation 与 Label 一样用键值对来定义，但 Annotation 是作为属性扩展，更多面向于系统管理员和开发人员，因此需要像其他属性一样做合理归类。
+    Annotation 与 Label 一样用键值对来定义，但 Annotation 是作为属性扩展，更多面向于系统管理员和开发人员，因此需要像其他属性一样做合理归类。（k get node -oyaml，参考 node 资源的设置）
 
 3. <font color=blue>Finalizer</font>
 
