--- a/docs/2/2/5.md
+++ b/docs/2/2/5.md
@@ -30,12 +30,14 @@ spec:
 ```
 
 ## 如何通过 Pod 对象定义支撑应用运行
+### 配置信息来源
+#### 环境变量
 ![通过 Pod 对象定义支撑应用运行](images/%E5%A6%82%E4%BD%95%E9%80%9A%E8%BF%87Pod%E5%AF%B9%E8%B1%A1%E5%AE%9A%E4%B9%89%E6%94%AF%E6%92%91%E5%BA%94%E7%94%A8%E8%BF%90%E8%A1%8C.png)
 
-## 存储卷
+#### 存储卷
 - 通过存储卷可以将外挂存储挂载到 Pod 内部使用。 
 - 存储卷定义包括两个部分: Volume 和 VolumeMounts。 
-    - Volume：定义 Pod 可以使用的存储卷来源； 
+    - Volume：定义 Pod 可以使用的存储卷来源；
     - VolumeMounts：定义存储卷如何 Mount 到容器内部。
 
 ```
@@ -90,12 +92,44 @@ spec:
 ## 健康检查
 Kubernetes 作为一个面向应用的集群管理工具，需要确保容器在部署后确实处在正常的运行状态。
 
+启动 centos pod: `k apply -f 6-yamls/centos-readiness.yaml`
+```
+k get pod centos-578b69b65f-2cpmm -oyaml
+```
+```
+spec:
+  containers:
+  - command:
+    - tail
+    - -f
+    - /dev/null
+    image: centos
+    imagePullPolicy: Always
+    name: centos
+    readinessProbe:
+      exec:
+        command:
+        - cat
+        - /tmp/healthy
+      failureThreshold: 3
+      initialDelaySeconds: 5
+      periodSeconds: 5
+      successThreshold: 1
+      timeoutSeconds: 1
+```
 1. <font color=blue>探针类型：</font>
 
     - LivenessProbe
         - 探测应用是否处于健康状态，如果不健康则删除并重新创建容器。
     - ReadinessProbe
         - 探测应用是否就绪并且处于正常服务状态，如果不正常则不会接收来自 Kubernetes Service 的流量。
+          - ```NAME                      READY   STATUS    RESTARTS      AGE```
+          - ```centos-578b69b65f-2cpmm   0/1     Running   0             100s```
+        - failureThreshold: 出多少次错误 STATUS 改为 Faile
+        - initialDelaySeconds: 等多久（默认单位秒）开始执行
+        - periodSeconds: 每次出错间隔时间
+        - successThreshold:
+        - timeoutSeconds: 超时时间
     - StartupProbe
         - 探测应用是否启动完成，如果在 failureThreshold*periodSeconds 周期内未就绪，则会应用进程会被重启。
 
