--- a/docs/2/2/6.md
+++ b/docs/2/2/6.md
@@ -222,6 +222,21 @@ kubectl logs -f configmap-volume-pod
 ```
 kubectl create -f centos-readiness.yaml
 ```
+```
+k get pod
+NAME                      READY   STATUS    RESTARTS      AGE
+centos-578b69b65f-2cpmm   0/1     Running   0             8s
+```
+操作使 pod Ready
+```
+k exec -it centos-578b69b65f-2cpmm bash
+touch /tmp/healthy
+```
+```
+k get pod
+NAME                      READY   STATUS    RESTARTS      AGE
+centos-578b69b65f-8867d   1/1     Running   0             32s
+```
 
 ## Get object by columns
 ### get object by columns
