add: 查看 k8s 在 etcd 中存储的数据

--- a/docs/3/1.md
+++ b/docs/3/1.md
@@ -227,3 +227,61 @@ Atomic Compare-and-Swap (CAS) 指的是在对 key 进行赋值的时候，客户
 - prevlndex: key 当前赋值前的 Index
 
 这样的话，key 的设置是有前提的，需要知道这个 key 当前的具体情况才可以对其设置。
+
+## 查看 k8s 在 etcd 中存储的数据
+## 进入 etcd 容器
+```
+ks get pod|grep etcd
+```
+```
+ks exec -it etcd-cjx sh
+```
+### 查看启动参数
+```
+ps -ef|grep etcd
+```
+```
+root        2431    2372  2 14:23 ?        00:00:08 etcd --advertise-client-urls=https://192.168.1.168:2379 --cert-file=/etc/kubernetes/pki/etcd/server.crt --client-cert-auth=true --data-dir=/var/lib/etcd --experimental-initial-corrupt-check=true --initial-advertise-peer-urls=https://192.168.1.168:2380 --initial-cluster=cjx=https://192.168.1.168:2380 --key-file=/etc/kubernetes/pki/etcd/server.key --listen-client-urls=https://127.0.0.1:2379,https://192.168.1.168:2379 --listen-metrics-urls=http://127.0.0.1:2381 --listen-peer-urls=https://192.168.1.168:2380 --name=cjx --peer-cert-file=/etc/kubernetes/pki/etcd/peer.crt --peer-client-cert-auth=true --peer-key-file=/etc/kubernetes/pki/etcd/peer.key --peer-trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt --snapshot-count=10000 --trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt
+```
+- endpoints: --advertise-client-urls=https://192.168.1.168:2379
+- cert: --cert-file=/etc/kubernetes/pki/etcd/server.crt
+- key: --key-file=/etc/kubernetes/pki/etcd/server.key
+- cacert: --trusted-ca-file=/etc/kubernetes/pki/etcd/ca.crt
+
+### 操作
+#### member list
+```
+etcdctl --endpoints https://127.0.0.1:2379 --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernetes/pki/etcd/ca.crt member list --write-out=table
+```
+output
+```
++------------------+---------+------+----------------------------+----------------------------+------------+
+|        ID        | STATUS  | NAME |         PEER ADDRS         |        CLIENT ADDRS        | IS LEARNER |
++------------------+---------+------+----------------------------+----------------------------+------------+
+| 37646e37976003c2 | started |  cjx | https://192.168.1.168:2380 | https://192.168.1.168:2379 |      false |
++------------------+---------+------+----------------------------+----------------------------+------------+
+```
+#### get
+```
+etcdctl --endpoints https://127.0.0.1:2379 --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernetes/pki/etcd/ca.crt get --prefix / --keys-only
+```
+output
+```
+......
+/registry/pods/default/nginx
+......
+/registry/pods/kube-system/kube-proxy-kwnx7
+......
+
+/registry/services/specs/calico-system/calico-typha
+
+/registry/services/specs/default/kubernetes
+
+/registry/services/specs/kube-system/kube-dns
+```
+##### 获取细节
+```
+etcdctl --endpoints https://127.0.0.1:2379 --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernetes/pki/etcd/ca.crt get /registry/pods/default/nginx
+etcdctl --endpoints https://127.0.0.1:2379 --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernetes/pki/etcd/ca.crt get /registry/pods/kube-system/kube-proxy-kwnx7
+```
+结果以 protobuf 格式存储
