add: 查看 k8s 在 etcd 中存储的数据

--- a/docs/3/1.md
+++ b/docs/3/1.md
@@ -229,7 +229,7 @@ Atomic Compare-and-Swap (CAS) 指的是在对 key 进行赋值的时候，客户
 这样的话，key 的设置是有前提的，需要知道这个 key 当前的具体情况才可以对其设置。
 
 ## 查看 k8s 在 etcd 中存储的数据
-## 进入 etcd 容器
+### 进入 etcd 容器
 ```
 ks get pod|grep etcd
 ```
