--- a/docs/3/2.md
+++ b/docs/3/2.md
@@ -65,31 +65,38 @@ etcd 提供了命令和设置选项来控制 compact, 同时支持 put 操作的
 
 ![存储机制](images/%E5%AD%98%E5%82%A8%E6%9C%BA%E5%88%B6.png)
 
-## Etcd 的数据一致性
+## etcd 的数据一致性
 ![Etcd的数据一致性](images/Etcd%E6%95%B0%E6%8D%AE%E4%B8%80%E8%87%B4%E6%80%A7.png)
 
-## Watch机制
+## Watch 机制
 etcd v3 的 watch 机制支持 watch 某个固定的 key, 也支持 watch 一个范围(可以用于模拟目录的 结构的 watch), 所以 watchGroup 包含两种 watcher, —种是 key watchers, 数据结构是每个 key 对应一组 watcher, 另外一种是 range watchers, 数据结构是一个 IntervalTree, 方便通过区间查找到对应的 watcher. 
 
 同时, 每个 WatchableStore 包含两种 watcherGroup, —种是 synced, —种是 unsynced, 前者表示该 group 的 watcher 数据都已经同步完毕, 在等待新的变更, 后者表示该 group 的 watcher 数据同步落后于当前最新变更, 还在追赶. 
 
 当 etcd 收到客户端的 watch 请求, 如果请求携带了 revision 参数, 则比较请求的 revision 和 store 当前的 revision, 如果大于当前 revision, 则放入 synced 组中, 否则放入 unsynced组. 同时 etcd 会启动一个后台的 goroutine 持续同步 unsynced 的 watcher, 然后将其迁移到 synced 组. 也就是这种机制下, etcd v3 支持从任意版本开 Swatch, 没有 v2 的 1000 条历史 event 表限制的问题(当然这是指没有 compact 的情况下)
 
-## etcd练习
+## etcd 练习
+### on kubernetes
 查看集群成员状态 `etcdctl member list --write-out=table`
 ```
-
+etcdctl --endpoints https://127.0.0.1:2379 --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernet<-key /etc/kubernetes/pki/etcd/server.key --cacert /etc/kubernetes/pki/etcd/ca.crt member list --write-out=table  
+```
+```                                         
++------------------+---------+------+----------------------------+----------------------------+------------+
+|        ID        | STATUS  | NAME |         PEER ADDRS         |        CLIENT ADDRS        | IS LEARNER |
++------------------+---------+------+----------------------------+----------------------------+------------+
+| 37646e37976003c2 | started |  cjx | https://192.168.1.168:2380 | https://192.168.1.168:2379 |      false |
++------------------+---------+------+----------------------------+----------------------------+------------+
+```
+### on docker
+启动新 etcd 集群
+```
+docker run --name etcd -d registry.aliyuncs.com/google_containers/etcd:3.5.0-0 /usr/local/bin/etcd
 ```
 
-启动新etcd集群
+进入 etcd 容器
 ```
-docker run -d registry.aliyuncs.com/google_containers/etcd:3.5.0-0 /usr/local/bin/etcd
-```
-
-进入etcd容器
-```
-docker ps|grep etcd
-docker exec -it <containerid> sh
+docker exec -it etcd sh
 ```
 
 存入数据
@@ -100,9 +107,11 @@ etcdctl put x 0
 读取数据
 ```
 etcdctl get x -w=json
-```
-```
 
+etcdctl get x -wjson
+```
+```
+{"header":{"cluster_id":14841639068965178418,"member_id":10276657743932975437,"revision":2,"raft_term":2},"kvs":[{"key":"eA==","create_revision":2,"mod_revision":2,"version":1,"value":"MA=="}],"count":1}
 ```
 
 修改值
@@ -113,6 +122,7 @@ etcdctl put x 1
 查询最新值
 ```
 etcdctl get x
+etcdctl get x --rev=0
 ```
 
 查询历史版本值
@@ -120,6 +130,28 @@ etcdctl get x
 etcdctl get x --rev=2
 ```
 
+修改值
+```
+etcdctl put x 2
+```
+
+查询最新值
+```
+etcdctl get x --rev=0
+etcdctl get x --rev=0 -wjson
+```
+
+查询历史版本值
+```
+etcdctl get x --rev=2
+etcdctl get x --rev=3 -wjson
+```
+> --rev = revision, 获取指定具体版本的值
+
+- revision: 全局版本
+- create_revision: 创建数据时对应的全局版本
+- mod_revision: 当前数据对应的全局版本
+- version: 数据自己的版本
 ## etcd成员重要参数
 成员相关参数
 ```
@@ -168,23 +200,22 @@ etcdctl get x --rev=2
 ## 灾备
 - 创建 Snapshot
 ```
-    etcdctl —endpoints https://127.0.0.1:3379 —cert /tmp/etcd-certs/certs/127.0.0.1 .pem - -key /tmp/etcd-certs/certs/127.0.0.1 -key.pem --cacert /tmp/etcd-certs/certs/ca.pem snapshot save snapshot.db
+etcdctl —endpoints https://127.0.0.1:3379 —cert /tmp/etcd-certs/certs/127.0.0.1 .pem - -key /tmp/etcd-certs/certs/127.0.0.1 -key.pem --cacert /tmp/etcd-certs/certs/ca.pem snapshot save snapshot.db
 ```
 - 恢复数据
 ```
-    etcdctl snapshot restore snapshot.db \
-    --name infra2 \
-    --data-dir=/tmp/etcd/infra2 \
-    --initial-cluster
-    infra0=http://127.0.0.1:3380Jnfra1=http://127.0.0.1:4380Jnfra2=http://127.0.0.1:5380
-    --initial-cluster-token etcd-cluster-1 \
-    --initial-advertise-peer-urls http://127.0.0.1:5380
+etcdctl snapshot restore snapshot.db \
+--name infra2 \
+--data-dir=/tmp/etcd/infra2 \
+--initial-cluster infra0=http://127.0.0.1:3380,infra1=http://127.0.0.1:4380,infra2=http://127.0.0.1:5380 \
+--initial-cluster-token etcd-cluster-1 \
+--initial-advertise-peer-urls http://127.0.0.1:5380
 ```
 
 ## 容量管理
-- 单个对象不建议超过1.5M 
-- 默认容量2G
-- 不建议超过8G
+- 单个对象不建议超过 1.5M 
+- 默认容量 2G
+- 不建议超过 8G
 
 ## Alarm & Disarm Alarm
 - 设置 etcd 存储大小
@@ -195,11 +226,11 @@ $ etcd --quota-backend-bytes=$((16*1024*1024))
 ```
 $ while [1]; do dd if=/dev/urandom bs=1024 count=1024 | ETCDCTL_API=3 etcdctl put key || break; done
 ```
-- 查看endpoint状态
+- 查看 endpoint 状态
 ```
 $ ETCDCTL_API=3 etcdctl --write-out=table endpoint status
 ```
-- 查看alarm
+- 查看 alarm
 ```
 $ ETCDCTL_API=3 etcdctl alarm list
 ```
@@ -207,7 +238,7 @@ $ ETCDCTL_API=3 etcdctl alarm list
 ```
 $ ETCDCTL_API=3 etcdctl defrag
 ```
-- 清理alarm
+- 清理 alarm
 ```
 $ ETCDCTL_API=3 etcdctl alarm disarm
 ```
@@ -225,7 +256,7 @@ Finished defragmenting etcd member[127.0.0.1:2379]
 ```
 
 ## 课后练习5.1
-- 按照课上讲解的方法在本地构建一个单节点的基于HTTPS的etcd集群
+- 按照课上讲解的方法在本地构建一个单节点的基于 HTTPS 的 etcd 集群
 - 写一条数据
 - 查看数据细节
 - 删除数据
